# devops-pipeline-poc

./: main.py  params.ipynb  register_scraper.py  setup.cfg  setup.py
devopspipelinepoc/: main.py
devopspipelinepoc.egg-info/: PKG-INFO
devopspipelinepoc/data/: data_output_worker.txt  path_output_worker.txt  scrapy_dockerfile.txt  selenium_dockerfile.txt
example/sample_scraper/: blackwidow_config.json  scrape.py  test_scrape.py
