[metadata]
name = devops-pipeline-poc
version = 0.4.12
author = Puneet
author_email = puneetudhayan@gmail.com
description = Test 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PuneetUdhayanGraphene/devops-pipeline-poc
project_urls =
    Bug Tracker = https://github.com/PuneetUdhayanGraphene/devops-pipeline-poc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
